--- a/leo/style.css
+++ b/leo/style.css
@@ -14,11 +14,29 @@
     margin-bottom: 20px;
 }
 
+.map p {
+    background-color: #f5f5f5;
+    border-left: 3px solid turquoise;
+    padding: 20px;
+    width: 100%;
+    font-size: 20px;
+}
+
 .map_address {
     margin-top: 15px;
 }
 
 iframe {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 330px;
+}
+
+.step2 {
+    margin-top: 15px;
+}
+
+.step2 img {
+    margin-top: 15px;
+    width: 50%;
+    height: 290px;
 }
