--- a/ayane/css/style.css
+++ b/ayane/css/style.css
@@ -107,7 +107,7 @@ li{
     z-index: 9;
   }
 
-  /* ハンバーガーメニュー */
+ /* ハンバーガーメニュー */
 .hamburger {
   display: none;
   width: 28px;
@@ -239,44 +239,38 @@ li{
     @media screen and (max-width: 480px) {
       body {
         min-width: 375px;
-
       }
+      .headerall{
+        display: none;
+      }          
+      
       #slideshow {
-        width: 100px;
-        /* 画像の横幅に合わせて記述 */
-        /* 画像の高さに合わせて記述 */
+        width: 100%;
         margin-bottom: -100px;
         margin-left: 0px;
+
       }
       #slideshow img {
         width: 100%;
-        height: 50%;
+        height: 250px;
       }
+      .container-fluid{
 
+      }
       .container-fluid p{
-        font-size: 20px;
-
+      font-size: 20px;
+      margin-top: 150px;
       }
 
       /* header */
       .icon {
-        margin-left: 20px;
-      }
-    
-      .icon .name {
-        display: none;
-      }
-    
-      .header-right{
-        display: none;
+        /* display: none; */
       }
 
       
       /* ハンバーガーメニュー */
       .hamburger {
         display: block;
-        position: absolute;
-        z-index: 10;
       }
       /* ハンバーガーメニューここまで */
     
