--- a/ayane/css/style.css
+++ b/ayane/css/style.css
@@ -1,92 +1,96 @@
 /* header */
-header{
+
+header {
     background-color: #ffffff;
 }
 
-.headerall{
+.headerall {
     display: flex;
     justify-content: space-between;
-    
 }
 
-.fixed{
+.fixed {
     position: fixed;
     z-index: 10;
     width: 100%;
-    margin-top:-70px;
-  }
+    margin-top: -70px;
+}
 
-
-.icon{
+.icon {
     height: 30px;
-    margin-left:20px ;
+    margin-left: 20px;
     margin-top: 15px;
 }
 
-.menu{
+.menu {
     display: flex;
     font-size: 13px;
     margin-right: 20px;
     justify-content: flex-end;
     background-color: #ffffff;
-    font-weight: 500;  
+    font-weight: 500;
     margin-top: 25px;
 }
 
 a {
     text-decoration: none;
-    color:#000000;
-  }
+    color: #000000;
+}
 
-li{
+li {
     list-style: none;
 }
 
-.menucontent{
+.menucontent {
     margin-right: 7px;
 }
+
+
 /* メインスライダー */
-.container-fluid{
+
+.container-fluid {
     position: relative;
 }
+
 .container-fluid p {
-  position: absolute;/*絶対配置*/
-  z-index: 5;
-  color: white;/*文字は白に*/
-  font-family: 'Cinzel Decorative', cursive;
-  text-shadow:0px 0px 3px #000000;
-  opacity: 0.9;
-  font-size: 55px;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%,-50%);
-  -webkit-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
-  margin-top: 300px;
-  padding:0;
-  }
+    position: absolute;
+    /*絶対配置*/
+    z-index: 5;
+    color: white;
+    /*文字は白に*/
+    font-family: 'Cinzel Decorative', cursive;
+    text-shadow: 0px 0px 3px #000000;
+    opacity: 0.9;
+    font-size: 55px;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    margin-top: 300px;
+    padding: 0;
+}
 
 .container-fluid img {
-  width: 100%;
-  z-index: 1;
-  }
-
+    width: 100%;
+    z-index: 1;
+}
 
 #slideshow {
     border: none;
     position: relative;
     z-index: 2;
     display: block;
-    width:  100%;
+    width: 100%;
     /* 画像の横幅に合わせて記述 */
     height: 50%;
     /* 画像の高さに合わせて記述 */
     background-size: cover;
-    margin-top:70px;
+    margin-top: 70px;
     margin-bottom: 50px;
-  }
-  
-  #slideshow img {
+}
+
+#slideshow img {
     position: absolute;
     z-index: 2;
     top: 0;
@@ -96,191 +100,184 @@ li{
     width: 100vw;
     height: 90vh;
     box-shadow: inset 0 10px 25px 0 rgba(0, 0, 0, 0.5);
-  }
-  
-  #slideshow img.active {
+}
+
+#slideshow img.active {
     z-index: 10;
     opacity: 1.0;
-  }
-  
-  #slideshow img.last-active {
-    z-index: 9;
-  }
+}
 
-  /* ハンバーガーメニュー */
+#slideshow img.last-active {
+    z-index: 9;
+}
+
+
+/* ハンバーガーメニュー */
+
 .hamburger {
-  display: none;
-  width: 28px;
-  align-self: center;
-  margin-right: 20px;
+    display: none;
+    width: 28px;
+    align-self: center;
+    margin-right: 20px;
 }
 
 .hamburger span:after,
 .hamburger span:before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: -9px;
+    content: "";
+    position: absolute;
+    left: 0;
+    top: -9px;
 }
 
-.hamburger span:after{
-  top: 9px;
+.hamburger span:after {
+    top: 9px;
 }
 
 .hamburger span {
-  position: relative;
-  display: block;
+    position: relative;
+    display: block;
 }
 
 .hamburger span,
 .hamburger span:after,
 .hamburger span:before {
-  width: 100%;
-  height: 5px;
-  background-color: #fff;
-  transition: all 0.5s;    /*←アニメーション*/
-  backface-visibility: hidden;
-  border-radius: 2px;
+    width: 100%;
+    height: 5px;
+    background-color: #fff;
+    transition: all 0.5s;
+    /*←アニメーション*/
+    backface-visibility: hidden;
+    border-radius: 2px;
 }
 
 .hamburger.on span {
-  background-color: transparent;
+    background-color: transparent;
 }
 
 .hamburger.on span:before {
-  transform: rotate(45deg) translate(5px, 5px);
+    transform: rotate(45deg) translate(5px, 5px);
 }
 
 .hamburger.on span:after {
-  transform: rotate(-45deg) translate(7px, -8px);
+    transform: rotate(-45deg) translate(7px, -8px);
 }
+
+
 /* ハンバーガーメニューここまで */
 
+
 /* ドロワー */
+
 #drower-bg {
-  display: none; 
-  position: fixed;
-  top: 70px;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, .5);
+    display: none;
+    position: fixed;
+    top: 70px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .5);
 }
 
 .drower {
-  position: absolute;
-  top: 70px;
-  height: 100vh;
-  width: 200px;
-  background-color: rgba(8, 8, 8, .5);
-  right: -200px;
+    position: absolute;
+    top: 70px;
+    height: 100vh;
+    width: 200px;
+    background-color: rgba(8, 8, 8, .5);
+    right: -200px;
 }
 
 .drower.on {
-  right: 0;
-  transition-duration: 600ms;
+    right: 0;
+    transition-duration: 600ms;
 }
+
 
 /* ドロワー ここまで*/
 
-
-    @media screen and (max-width: 1280px) {
-      .img-box li {
+@media screen and (max-width: 1280px) {
+    .img-box li {
         margin-right: 30px;
-      }
     }
-    
-    /* タブレット用 */
-    @media screen and (max-width: 960px) {
-      .img-box {
+}
+
+
+/* タブレット用 */
+
+@media screen and (max-width: 960px) {
+    .img-box {
         flex-wrap: wrap;
         justify-content: space-around;
-      }
-    
-      .img-box li {
+    }
+    .img-box li {
         margin-top: 30px;
         margin-right: 0;
-      }
-    
-       /* contact */
-     .contact .form {
-      flex-flow: column nowrap;
-      margin:30px 0;
-     }
-    
-      .form .name, .form .email ,.form .inquiry {
+    }
+    /* contact */
+    .contact .form {
+        flex-flow: column nowrap;
+        margin: 30px 0;
+    }
+    .form .name,
+    .form .email,
+    .form .inquiry {
         width: 80%;
-      }
-    
-      .form .name, .form .email {
+    }
+    .form .name,
+    .form .email {
         height: 30px;
-      }
-    
-     .form .inquiry {
+    }
+    .form .inquiry {
         height: 50px;
-      }
-    
-      .form-left {
+    }
+    .form-left {
         margin-right: 0;
-      }
-    
-      .form-right {
+    }
+    .form-right {
         margin-top: 20px;
-      }
-    
-      .contact button {
+    }
+    .contact button {
         font-size: 20px;
         padding: 5px 40px;
-      }
     }
-    
-    
-    /* スマフォ用 */
-    @media screen and (max-width: 480px) {
-      body {
-        min-width: 375px;
+}
 
-      }
-      #slideshow {
+
+/* スマフォ用 */
+
+@media screen and (max-width: 480px) {
+    body {
+        min-width: 375px;
+    }
+    #slideshow {
         width: 100px;
         /* 画像の横幅に合わせて記述 */
         /* 画像の高さに合わせて記述 */
         margin-bottom: -100px;
         margin-left: 0px;
-      }
-      #slideshow img {
+    }
+    #slideshow img {
         width: 100%;
         height: 50%;
-      }
-
-      .container-fluid p{
+    }
+    .container-fluid p {
         font-size: 20px;
-
-      }
-
-      /* header */
-      .icon {
+    }
+    /* header */
+    .icon {
         margin-left: 20px;
-      }
-    
-      .icon .name {
+    }
+    .icon .name {
         display: none;
-      }
-    
-      .header-right{
+    }
+    .header-right {
         display: none;
-      }
-
-      
-      /* ハンバーガーメニュー */
-      .hamburger {
+    }
+    /* ハンバーガーメニュー */
+    .hamburger {
         display: block;
         position: absolute;
         z-index: 10;
-      }
-      /* ハンバーガーメニューここまで */
-    
     }
-    
-    
-    
+    /* ハンバーガーメニューここまで */
+}
